--- a/config/server.conf
+++ b/config/server.conf
@@ -5,7 +5,9 @@ ca /etc/openvpn/ca.crt
 cert /etc/openvpn/MyReq.crt
 key /etc/openvpn/MyReq.key
 dh /etc/openvpn/dh.pem
-server 10.8.0.0 255.255.255.0
+# server 10.8.0.0 255.255.255.0
+server 192.168.255.128 255.255.255.128
+
 ifconfig-pool-persist ipp.txt
 push "redirect-gateway def1 bypass-dhcp"
 push "dhcp-option DNS 208.67.222.222"
@@ -23,3 +25,6 @@ tls-server
 tls-version-min 1.2
 tls-auth /etc/openvpn/ta.key 0
 crl-verify /etc/openvpn/crl.pem
+
+client-to-client
+management localhost 10001
