--- a/config/server.conf
+++ b/config/server.conf
@@ -6,7 +6,7 @@ cert /etc/openvpn/MyReq.crt
 key /etc/openvpn/MyReq.key
 dh /etc/openvpn/dh.pem
 # server 10.8.0.0 255.255.255.0
-server 192.168.255.128 255.255.255.128
+server 192.168.255.0 255.255.255.0
 
 ifconfig-pool-persist ipp.txt
 push "redirect-gateway def1 bypass-dhcp"
@@ -28,4 +28,4 @@ crl-verify /etc/openvpn/crl.pem
 
 client-to-client
 management localhost 10001
-client-config-dir ccd
+client-config-dir config/ccd
